[#noissue] Refactor HbaseConfiguration